--- a/Android-Studio-App-QR-Code-Hunter.html
+++ b/Android-Studio-App-QR-Code-Hunter.html
@@ -97,7 +97,7 @@
 
 						<span class="image featured"><img
 								src="articleAssets\Android-Studio-App-QR-Code-Hunter\QR-Code-Hunter_11.jpg"
-								alt="" /></span>
+								alt="" style="margin-left:auto;margin-right:auto;width:550px;" /></span>
 						<div class="center">
 							<p><i>Here's an example item with a bar code.</i>
 							</p>
@@ -105,7 +105,7 @@
 
 						<span class="image featured"><img
 								src="articleAssets\Android-Studio-App-QR-Code-Hunter\QR-Code-Hunter_3.jpg"
-								alt="" /></span>
+								alt="" style="margin-left:auto;margin-right:auto;width:550px;"/></span>
 						<div class="center">
 							<p><i>The app can use the phone camera to scan the barcode<br> (I dont have it focused on
 									the bar code because it would have automatically switched the app view).</i>
@@ -114,7 +114,7 @@
 
 						<span class="image featured"><img
 								src="articleAssets\Android-Studio-App-QR-Code-Hunter\QR-Code-Hunter_4.jpg"
-								alt="" /></span>
+								alt="" style="margin-left:auto;margin-right:auto;width:550px;"/></span>
 						<div class="center">
 							<p><i>The is the generated monster with name, picture, and point value.</i>
 							</p>
@@ -122,7 +122,7 @@
 
 						<span class="image featured"><img
 							src="articleAssets\Android-Studio-App-QR-Code-Hunter\QR-Code-Hunter_1.jpg"
-							alt="" /></span>
+							alt="" style="margin-left:auto;margin-right:auto;width:550px;"/></span>
 					<div class="center">
 						<p><i>A view of the Open Street Map to see nearby codes registered by others.</i>
 						</p>
@@ -130,7 +130,7 @@
 
 						<span class="image featured"><img
 								src="articleAssets\Android-Studio-App-QR-Code-Hunter\QR-Code-Hunter_5.jpg"
-								alt="" /></span>
+								alt="" style="margin-left:auto;margin-right:auto;width:550px;"/></span>
 						<div class="center">
 							<p><i>A view of a user's code library with all they have collected.</i>
 							</p>
@@ -138,7 +138,7 @@
 
 						<span class="image featured"><img
 								src="articleAssets\Android-Studio-App-QR-Code-Hunter\QR-Code-Hunter_6.jpg"
-								alt="" /></span>
+								alt="" style="margin-left:auto;margin-right:auto;width:550px;"/></span>
 						<div class="center">
 							<p><i>A user can make comment's on their codes (for others, who have the same code, to
 									see).</i>
@@ -147,7 +147,7 @@
 
 						<span class="image featured"><img
 								src="articleAssets\Android-Studio-App-QR-Code-Hunter\QR-Code-Hunter_7.jpg"
-								alt="" /></span>
+								alt="" style="margin-left:auto;margin-right:auto;width:550px;"/></span>
 						<div class="center">
 							<p><i>We can view everyone's scores/placings and the codes they collected.</i>
 							</p>
@@ -155,7 +155,7 @@
 
 						<span class="image featured"><img
 								src="articleAssets\Android-Studio-App-QR-Code-Hunter\QR-Code-Hunter_8.jpg"
-								alt="" /></span>
+								alt="" style="margin-left:auto;margin-right:auto;width:550px;"/></span>
 						<div class="center">
 							<p><i>The user has a dedicated profile page where they can view their own score
 									placings.</i>
@@ -201,7 +201,7 @@
 						</div>
 
 						<div class="center">
-							<video autoplay loop muted playsinline>
+							<video height="1000" width="550" autoplay loop muted playsinline>
 								<source
 									src="articleAssets\Android-Studio-App-QR-Code-Hunter\RPReplay_Final1680734913.MOV"
 									type="video/mp4">
