--- a/Arduino-Weather-Station-Anemometer-Engg-Course.html
+++ b/Arduino-Weather-Station-Anemometer-Engg-Course.html
@@ -89,7 +89,7 @@
 						</p>
 
 						<span class="image featured"><img
-								src="articleAssets\Arduino-Weather-Station-Anemometer-Engg-Course\engg160project_2.jpg"
+								src="articleAssets\Arduino-Weather-Station-Anemometer-Engg-Course\engg160station_2.png"
 								alt="" /></span>
 						<div class="center">
 							<p><i>System with clearer look at LCD and DHT (temperature/humidity sensor).<br> The LCD is
