--- a/Firebase-Database-Esp8266-Sender-Receiver.html
+++ b/Firebase-Database-Esp8266-Sender-Receiver.html
@@ -74,7 +74,7 @@
 						</p>
 
 						<span class="image featured"><img
-								src="articleAssets\Firebase-Database-Esp8266-Sender-Receiver\Firebase-Database-Esp8266_3.jpg"
+								src="articleAssets\Firebase-Database-Esp8266-Sender-Receiver\Firebase-Database-Esp8266_3.png"
 								alt="" /></span>
 						<div class="center">
 							<p><i>A view of the Firebase database from its webpage.</i>
