--- a/Simple-Solar-Bird-Bath.html
+++ b/Simple-Solar-Bird-Bath.html
@@ -55,7 +55,7 @@
 
 						<div class="center">
 							<video autoplay loop muted playsinline>
-								<source src="articleAssets\Simple-Solar-Bird-Bath\20230630_125307.mp4" type="video/mp4">
+								<source src="articleAssets\Simple-Solar-Bird-Bath\Simple-Solar-Bird-Bath_2.mp4" type="video/mp4">
 							</video>
 						</div>
 						<!-- <span class="image featured"><img src="images/andrew-ridley-GZl6HWkjWsM-unsplash.jpg" alt="" /></span> -->
@@ -81,35 +81,35 @@
 						<!-- <source src="images/vid_gardenherbsvegs.mp4" type="video/mp4"> -->
 						<!-- </video> -->
 						<!-- </div> -->
-						<span class="image featured"><img src="articleAssets\Simple-Solar-Bird-Bath\20230630_125337.jpg"
-								alt="" /></span>
+						<span class="image featured"><img src="articleAssets\Simple-Solar-Bird-Bath\Simple-Solar-Bird-Bath_3.jpg"
+								alt="" style="margin-left:auto;margin-right:auto;width:550px;"/></span>
 						<div class="center">
 							<p><i>Solar powered using 5v USB cord.</i>
 							</p>
 						</div>
-						<span class="image featured"><img src="articleAssets\Simple-Solar-Bird-Bath\20230630_125351.jpg"
-								alt="" /></span>
+						<span class="image featured"><img src="articleAssets\Simple-Solar-Bird-Bath\Simple-Solar-Bird-Bath_4.jpg"
+								alt="" style="margin-left:auto;margin-right:auto;width:550px;"/></span>
 						<div class="center">
 							<p><i>Small 5v water pump.</i>
 							</p>
 						</div>
 						<div class="center">
-							<video autoplay loop muted playsinline>
-								<source src="articleAssets\Simple-Solar-Bird-Bath\20230630_161902.mp4" type="video/mp4">
+							<video height="1000" width="550" autoplay loop muted playsinline>
+								<source src="articleAssets\Simple-Solar-Bird-Bath\Simple-Solar-Bird-Bath_6.mp4" type="video/mp4">
 							</video>
 						</div>
 						<div class="center">
 							<p><i>Water arrestor in action; (it's cheap, but it works).</i>
 							</p>
 						</div>
-						<span class="image featured"><img src="articleAssets\Simple-Solar-Bird-Bath\20230630_125445.jpg"
-								alt="" /></span>
+						<span class="image featured"><img src="articleAssets\Simple-Solar-Bird-Bath\Simple-Solar-Bird-Bath_5.jpg"
+								alt="" style="margin-left:auto;margin-right:auto;width:550px;"/></span>
 						<div class="center">
 							<p><i>Small paper clamp to secure spout.</i>
 							</p>
 						</div>
-						<span class="image featured"><img src="articleAssets\Simple-Solar-Bird-Bath\20230629_172853.jpg"
-								alt="" /></span>
+						<span class="image featured"><img src="articleAssets\Simple-Solar-Bird-Bath\Simple-Solar-Bird-Bath_1.jpg"
+								alt="" style="margin-left:auto;margin-right:auto;width:550px;"/></span>
 						<div class="center">
 							<p><i>Dish and pail (with recycling hole).</i>
 							</p>
