--- a/Testing-Cheap-Solar-And-Battery-Storage-System.html
+++ b/Testing-Cheap-Solar-And-Battery-Storage-System.html
@@ -100,7 +100,7 @@
 						battery, some grommets for the wall wiring, and a lot more solar wattage to be useful for high
 						power loads.
 						However, the MPPT was less than $20 (when I bought it) and it is surprisingly great quality
-						(lots of features and control for cheap price).
+						(lots of features and control for cheap price).<br>
 						<b>Every little bit helps… I think.</b> Even though it’s a cheap setup, it can be used for my
 						hydroponics’ system; the plant water container needs a constant bubbling of air to prevent mold
 						growth on roots. The bubbler’s wattage is so low
