--- a/Website-Hosted-From-ESP8266.html
+++ b/Website-Hosted-From-ESP8266.html
@@ -97,7 +97,7 @@
 						<b>Can it be expanded?</b> If I add an SD card module to the microcontroller, could I host a
 						high-quality website? I was also reading about file systems with Arduinos like SPIFFS and
 						LittleFS which seemed to treat the controller as a folder holder for files like html, picture,
-						js files (so I don’t have to hardcode them into the Arduino sketch).
+						js files (so I don’t have to hardcode them into the Arduino sketch).<br>
 						<b>Public? No thanks.</b> I could set this up to be accessible from the public web by forwarding
 						my
 						ports to this device, but I’d rather use a safer method by going to a private service. Maybe
