--- a/Winning-APIC-2023-Energy-Hackathon.html
+++ b/Winning-APIC-2023-Energy-Hackathon.html
@@ -112,7 +112,7 @@
 						</div>
 
 						<h3>Lessons Learned and Future Changes</h3>
-						<b>Is there potential to test?</b> Is there potential to test? Our university has a Renewable
+						<b>Is there potential to test?</b> Our university has a Renewable
 						Energy Design (RED) student club that houses a solar panel storage system in conjunction with a
 						greenhouse and garden. It might be a cool idea to setup this software for that system (even
 						though we aren’t hooked up to the Alberta electrical grid) if we can get our panel’s sensors to
