--- a/Reflecting-On-Embedded-Systems-Concepts-With-FreeRTOS.html
+++ b/Reflecting-On-Embedded-Systems-Concepts-With-FreeRTOS.html
@@ -42,7 +42,7 @@
 					<article>
 						<header>
 							<h2>Reflecting On Embedded Systems Concepts With Arduino And FreeRTOS</h2>
-							<p>TAGS: electronics; software; FreeRTOS; Arduino; Nano; stepper motor; UART; </p>
+							<p>TAGS: electronics; software; FreeRTOS; Arduino Nano; stepper motor; UART; </p>
 						</header>
 
 						<h3>Why I Did This</h3>
@@ -128,7 +128,7 @@
 									- Right Arduino Nano receives UART and increments another counter (Right Display,
 									left number).<br><br>
 									- That incrementing causes the stepper motor to revolve; after completing revolution, causes an increment
-									of another counter (Right Display, middle number).<br><br>
+									of another counter (Right Display, right number).<br><br>
 									- Also, first display has counter (Left Display, right number) that acts as a heartbeat,
 									but also displays concurrency as its 'incrementing' task isn't stalled when the same board's 'LED array' task is
 									activated.
