--- a/Arduino-Weather-Station-Anemometer-Engg-Course.html
+++ b/Arduino-Weather-Station-Anemometer-Engg-Course.html
@@ -75,10 +75,13 @@
 							showcasing the project, and I have linked the project pdf report. <br>
 
 							3-minute showcase video:<br>
-							<a href="https://drive.google.com/file/d/1wErHDm5pf5-6gQ0QlYfw-1ThCe2kLK8U/view?usp=sharing" target="_blank">https://drive.google.com/file/d/1wErHDm5pf5-6gQ0QlYfw-1ThCe2kLK8U/view?usp=sharing</a> <br>
+							<a href="https://drive.google.com/file/d/1wErHDm5pf5-6gQ0QlYfw-1ThCe2kLK8U/view?usp=sharing"
+								target="_blank">https://drive.google.com/file/d/1wErHDm5pf5-6gQ0QlYfw-1ThCe2kLK8U/view?usp=sharing</a>
+							<br>
 
 							Project summary report (includes 3D models and Arduino code): <br>
-							<a href="https://drive.google.com/file/d/1RKcPiP9LFywomvhY5QyFRuR3Nwy8ELt4/view?usp=sharing" target="_blank">https://drive.google.com/file/d/1RKcPiP9LFywomvhY5QyFRuR3Nwy8ELt4/view?usp=sharing</a><br>
+							<a href="https://drive.google.com/file/d/1RKcPiP9LFywomvhY5QyFRuR3Nwy8ELt4/view?usp=sharing"
+								target="_blank">https://drive.google.com/file/d/1RKcPiP9LFywomvhY5QyFRuR3Nwy8ELt4/view?usp=sharing</a><br>
 
 							Given that this was done during the 2020 pandemic (so everyone’s isolated with virtual group
 							meetings),
@@ -104,7 +107,7 @@
 						<h3>Lessons Learned and Future Changes</h3>
 						<b>Reports are a nice tool.</b> I did the project a few years ago,
 						so I forgot the material since then, but the report I made certainly jogs my memory
-						as to what work I had to do to build this system.
+						as to what work I had to do to build this system.<br>
 						<b>I think the weather system actually works.</b> I remember distinctly during a period when
 						collecting the temperature values (for calibration) that I noticed the system temperature was
 						dropping, humidity was
