--- a/Reflecting-On-Embedded-Systems-Concepts-With-FreeRTOS.html
+++ b/Reflecting-On-Embedded-Systems-Concepts-With-FreeRTOS.html
@@ -141,8 +141,8 @@
 						<b>Power of concurrency.</b> Arduino alone is great for hardware/peripheral
 						control/communication, and interrupts, but with adding FreeRTOS, you can make multiple tasks
 						seem to work at the same time; this helps improve the value of a cheap single board
-						microcontroller.
-						<b>Opto-mise it.</b> I had at first attempted to use an opt-isolator with the stepper motor, but
+						microcontroller.<br>
+						<b>Opto-mise it.</b> I had at first attempted to use an opto-isolator with the stepper motor, but
 						it
 						wasn’t receiving the input signals, so I hard wired the inputs between the Nano and stepper.
 						This is bad practise as motors can induce back voltage through the signal lines that will fry
