--- a/Reflecting-On-Figma-For-Requires-Engg.html
+++ b/Reflecting-On-Figma-For-Requires-Engg.html
@@ -104,7 +104,7 @@
 
 						<h3>Lessons Learned and Future Changes</h3>
 						<b>Figma first, then code.</b> No surprise here that Figma is great tool for
-						demoing a product that has been coded yet. I recommend it for anyone who wants to ‘preview’
+						demoing a product that has not been coded yet. I recommend it for anyone who wants to ‘preview’
 						their apps.
 						</p>
 
