--- a/Remotely-Accessing-Servers-SSH.html
+++ b/Remotely-Accessing-Servers-SSH.html
@@ -99,8 +99,7 @@
 						<b>This client is a convenient tool, but it is still slow.</b> This is probably because
 						the computer spends time rendering the desktop client graphics, but I’m speculating on that.
 						Right now, I’m unaware of the native ability to download and upload files from the X2GO client;
-						I
-						know if I use another client, WinSCP, I can do file transfers, but that’s a dependency on
+						I know if I use another client, WinSCP, I can do file transfers, but that’s a dependency on
 						another application. Instead of using WinSCP nor X2Go, I would use VSCode’s SSH extension to act
 						as a lightweight SSH remote access client, as this is faster performing and has native file
 						transfer capabilities.
