--- a/Website-Hosted-From-Raspberry-Pi.html
+++ b/Website-Hosted-From-Raspberry-Pi.html
@@ -104,10 +104,10 @@
 						<h3>Lessons Learned and Future Changes</h3>
 						<b>Good, albeit limited performance.</b> If you expect to use this server only for low traffic
 						projects, then this Pi hardware is fine, but fi you expect to host your fast-growing web store
-						form it then I would use a cloud service or dedicate a faster processing computer.
+						form it then I would use a cloud service or dedicate a faster processing computer.<br>
 						<b>Beware of power outages.</b> If the server is needed for intermittent usage, then Pi is fine
 						alone, but if its need for a constant service, like 24/7 data tracker or controller, then you
-						might need to install some sort of uninterrupted power supply.
+						might need to install some sort of uninterrupted power supply.<br>
 						<b>Exposed?</b> In order to keep this server public, I had to open my ports; I have a domain
 						name to
 						use instead of an IP address, but anyone can easily find out what that IP is with IP look ups.
