uploaded: ESP-01 deep sleep worm farm

--- a/archived.html
+++ b/archived.html
@@ -738,7 +738,8 @@
 							the app). We also followed a sprint team review style when setting project goals.
 						</p>
 						<span class="image featured"><img
-								src="articleAssets\Unity-UAlberta-AR-App-Dev\Unity-UAlberta-AR_2.jpg" alt="" style="margin-left:auto; margin-right:auto; width:400px;"/></span>
+								src="articleAssets\Unity-UAlberta-AR-App-Dev\Unity-UAlberta-AR_2.jpg" alt=""
+								style="margin-left:auto; margin-right:auto; width:400px;" /></span>
 					</article>
 
 
@@ -781,6 +782,33 @@
 						</div>
 					</article>
 
+
+					<!-- Article//// -->
+					<!-- CTA -->
+					<section id="cta" class="wrapper style3">
+						<div class="container">
+						</div>
+					</section>
+					<article>
+						<header>
+							<h2><a href="Testing-Deep-Sleep-On-ESP01-With-Worm-Farm.html">Testing Deep Sleep Mode On An
+									ESP-01 With A Worm Farm</a></h2>
+							<p>TAGS: electronics; software; nature projects; ESP-01; Arduino; DS18B20 Temperature Probe;
+								batteries; IOT; AdafruitIO; Cayenne </p>
+						</header>
+						<h3>Why I Did This</h3>
+						<p>
+							I had an ESP-01 device and wanted to see if it could be a fit for low input, low power,
+							deep-sleep-mode applications. I just started a worm farm in some 5-gallon pails (it’s just
+							some layered pails with holes, filled with old vegetables and composting material; I wanted
+							to build it for compost, and to get worms for fishing). I figured this worm farm could be an
+							appropriate project to monitor pail temperatures and test the deep-sleeping capabilities of
+							an ESP-01 device.
+						</p>
+						<span class="image featured"><img
+								src="articleAssets\Testing-Deep-Sleep-On-ESP01-With-Worm-Farm\esp01_sleep_worm_0.jpg"
+								alt="" /></span>
+					</article>
 
 
 
