--- a/index.html
+++ b/index.html
@@ -139,14 +139,14 @@
 			</header>
 		</section> -->
 
-    <div class="center">
+    <!-- <div class="center">
       <video autoplay loop muted playsinline>
         <source src="images/windmills_93702_pixabay.mp4" type="video/mp4" />
       </video>
-    </div>
+    </div> -->
 
     <!-- Highlights -->
-    <section class="wrapper style1">
+    <!-- <section class="wrapper style1">
       <div class="container">
         <div class="row gtr-200">
           <section class="col-4 col-12-narrower">
@@ -182,7 +182,7 @@
           </section>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Posts -->
     <!-- <section class="wrapper style1">
