updated article: garden irrigation

--- a/Garden-Irrigation-System.html
+++ b/Garden-Irrigation-System.html
@@ -55,10 +55,12 @@
 						</p>
 
 						<span class="image featured"><img
-								src="articleAssets\Garden-Irrigation-System\Garden-Irrigation_5.jpg" alt="" /></span>
+								src="articleAssets\Garden-Irrigation-System\Garden-Irrigation_8.jpg" alt="" /></span>
 						<div class="center">
-							<p><i>The four-valve water solenoid; setup for supplying potentially 4 garden areas with
-									rain barrel water.</i>
+							<p><i>The updated setup with the components nested in a 3D printed box.
+									A corrugated tube holds the wires to the 4-way 12V solenoids.
+									A blue 120V cord receives power, while a yellow cord is powering the irrigation pump
+									via single relay.</i>
 							</p>
 						</div>
 
@@ -158,9 +160,27 @@
 						would be nice to add this system to an online server where I could program schedules; maybe I
 						will program that manually or find an MQTT service that can do that.
 						</p>
+						<b>UPDATE: 3D printed component box.</b> I found a nice customizable box by 'Bruners_' on
+						Thingiverse. It's quite large for a 3D printed item (about 20cm x 20cm x 10cm), but is still too
+						small/snug of a fit for the components; it barely fits everything in there.
+						We will have to see how water-resistant it is; if it isn't very water resistant, then maybe I
+						can coat the box with some PVC glue (which is basically PVC chips dissolved in acetone).
+						Otherwise, it looks much better than before (when it was poorly covered by a plastic bin).
+						</p>
+
+						<span class="image featured"><img
+								src="articleAssets\Garden-Irrigation-System\Garden-Irrigation_9.jpg" alt="" /></span>
+						<div class="center">
+							<p><i>Much cleaner (externally) containment; internal is somewhat tight. We will have to see
+									how waterproof it is.</i>
+							</p>
+						</div>
 
 						<h3>References</h3>
-						<p>4-valve water solenoid on Amazon: https://www.amazon.ca/dp/B085DTGWBM</p>
+						<p>4-valve water solenoid on Amazon: https://www.amazon.ca/dp/B085DTGWBM <br>
+							Customizable 3D printed box by 'Bruners_' on
+							Thingiverse: https://www.thingiverse.com/thing:4666908
+						</p>
 					</article>
 
 				</div>
